# Maze-game

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_venv.ps1
app/data/: question.py  questions.py
app/src/: main.py
app/src/core/: config.py  engine.py  game.py
app/src/models/: maze.py  player.py
app/src/views/: renderer.py  screens.py
scripts/: build.py  release.py  version_sync.py
