[project]
name = "maze-quest"
version = "1.0.1"
description = "Maze Quest — a 2D Pygame maze adventure with quiz checkpoints."
requires-python = ">=3.10"

# ──────────────────────────────────────────────────────────────────────────
# Task runner (taskipy) — npm-script-style commands.
#
#   task <name>
#
# Equivalent of the requested npm workflow:
#   "release:start" -> task release   (full automated release pipeline)
#   "version:sync"  -> task version:sync
# ──────────────────────────────────────────────────────────────────────────
[tool.taskipy.tasks]

# ── App ──────────────────────────────────────────────────────────────────
start  = "python app/src/main.py"
test   = "pytest"
format = "black ."
lint   = "flake8 ."

# ── Build ────────────────────────────────────────────────────────────────
# Produces dist/MazeQuest(.exe) via PyInstaller.
build = "python scripts/build.py"

# ── Version management ──────────────────────────────────────────────────
# Single source of truth = VERSION file at project root.
# These keep VERSION, pyproject.toml [project.version], and
# app/src/core/config.py (APP_VERSION) all identical.
#
#   task version:sync   -> just re-sync everything to current VERSION
#   task version:patch  -> 1.2.3 -> 1.2.4, then sync everywhere
#   task version:minor  -> 1.2.3 -> 1.3.0, then sync everywhere
#   task version:major  -> 1.2.3 -> 2.0.0, then sync everywhere
"version:sync"  = "python scripts/version_sync.py"
"version:patch" = "python scripts/version_sync.py patch"
"version:minor" = "python scripts/version_sync.py minor"
"version:major" = "python scripts/version_sync.py major"

# ── Release ──────────────────────────────────────────────────────────────
# Fully automated, no manual steps:
#   1. bump + sync version   2. build executable   3. commit version bump
#   4. create git tag        5. push commit + tag  6. publish GitHub
#      release with the executable attached and auto-generated notes.
#

#   task release         -> defaults to a PATCH bump
#   task release:patch
#   task release:minor
#   task release:major
release          = "python scripts/release.py patch"
"release:patch"  = "python scripts/release.py patch"
"release:minor"  = "python scripts/release.py minor"
"release:major"  = "python scripts/release.py major"